<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="preco_final">Preço Final</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="MASCARA_PARA_NOME_NO_CARTAO_CARACTERES_ACEITOS">qwertyuiopasdfghjklçzxcvbnm QWERTYUIOPASDFGHJKLÇZXCVBNM\u0020</string>
    <string name="digite_as_informa_es_do_cart_o_de_cr_dito_que_voce_quer_utilizar_para_o_pagamento">Digite as informações do cartão de crédito que voce quer utilizar para o pagamento.</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_cartao">Nome no Cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="compra_realizada_com_sucesso_parabens">Compra realizada com sucesso, parabéns! :)</string>
    <string name="parabens">Parabéns</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra:</string>
</resources>