<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/digite_as_informa_es_do_cart_o_de_cr_dito_que_voce_quer_utilizar_para_o_pagamento"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_compra"
        tools:text="R$ 425,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pagamento_preco_pacote"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc"
        app:layout_constraintStart_toStartOf="@id/pagamento_preco_pacote"/>

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"/>


    <EditText
        android:id="@+id/pagamento_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/cvc"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        />

    <EditText
        android:id="@+id/pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_cartao"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc"
        android:inputType="text"
        android:digits="@string/MASCARA_PARA_NOME_NO_CARTAO_CARACTERES_ACEITOS"
        app:layout_constraintStart_toStartOf="@+id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc" />

    <Button
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nome_no_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao" />


</androidx.constraintlayout.widget.ConstraintLayout>